working CV download button, and fixed alignment with text containers

--- a/static/styles.css
+++ b/static/styles.css
@@ -37,6 +37,8 @@ body {
 }
 
 button {
+
+    margin-left: auto;
     color: white;
     border-radius: 100px;
     padding: 14px;
@@ -63,6 +65,19 @@ button:hover {
     background-color: rgb(50, 50, 54);
     /* transition: background-color 0.3s ease-in; */
     /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); */
+  }
+
+  .arranger1 {
+    display: flex;
+  }
+
+  .arranger2 {
+    display: flexbox;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
   h3 {
@@ -163,4 +178,9 @@ button:hover {
 
   .active, .dot:hover {
       background-color: #717171;
+  }
+
+  .headercontainer {
+    display: flex;
+    flex-direction: column;
   }
